CVS
- Init queryParm.qy_flags for Ingres >= 9.2.0 - fix SEGV for database procedure call
- Simplify statement closure
- Return NULL when there is no message, fix SEGV for ingres_error()
- Ingres < 9.2.0 - ingres_query() make select cursor queries read-only too
- Added support for multiple concurrent result-sets
- Added automatic coercion between UTF-8 and UTF-16 
- Added support for Bi-directional scrolling cursors
- Added ingres_free_results() - free the memory associated with a given result set
- Added ingres_autocommit_state() - return the current auto-commit state
- Added ingres_next_error() - fetch additional errors if any

version 1.4.3
- Wait for disconnect to complete to prevent thread terminating uncleanly [grantc 07-03-07]

version 1.4.2
- Use exact value for DECIMAL parameters and not float estimates [05-03-07]
- Use IIapi_abort() to close connections at the request end [grantc 28-02-07]
- Added sample ingres.ini configuration file [grantc 15-02-07]
- Reduced memory usage when putting Long objects into the database [grantc 08-02-07]
- Initialize Ingres OpenAPI once during module startup [grantc 08-02-07]
- Fixed memory leak when fetching column names for row producing procedures [grantc 08-02-07]
- Fixed parameter handling for procedures with Unicode parameters [grantc 08-02-07]
- ingres_commit() no longer tries to commit when there is no transaction in effect [grantc 08-02-07]
- Removed elimination of UNICODE BOM [grantc 08-02-07]
- Fixed SEGV on module shutdown [grantc 24-01-07]
- Fix build against Ingres II 2.6 [grantc 17-01-07]

version 1.4.1
- Added environment check during initialization  [grantc 18-12-06]
- Fixed SEGV when closing a statement [grantc 13-12-06]
- Fixed spurious E_WARNING with empty LOB dataset [grantc 13-12-06]
- Fixed SEGV when ingres_close() is not called [grantc 13-12-06]
- Fixed auto commit cannot be enabled on shutdown [grantc 27-11-06] 
- Fixed Array index start for php_ii_field_name [grantc 20-11-06] 